--- a/index.html
+++ b/index.html
@@ -2,56 +2,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Control Your Blood Sugar Naturally | GlucoTonic</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f5f5f5; }
-    header { background: #008060; color: white; padding: 2rem; text-align: center; }
-    section { padding: 2rem; max-width: 800px; margin: auto; background: white; }
-    h1, h2 { margin-bottom: 1rem; }
-    p { margin-bottom: 1.5rem; }
-    .cta-button {
-      background-color: #28a745;
-      color: white;
-      padding: 1rem 2rem;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 8px;
-    }
-    footer { text-align: center; padding: 1rem; background: #eee; font-size: 0.9rem; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GlucoTonic Landing Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f7f7f7;
+            color: #333;
+        }
+        header, section {
+            padding: 40px 20px;
+            text-align: center;
+        }
+        .hero {
+            background: #000;
+            color: #fff;
+        }
+        .hero img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 12px;
+        }
+        .cta-button {
+            background: #28a745;
+            color: white;
+            padding: 15px 30px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            margin-top: 20px;
+            cursor: pointer;
+        }
+        .testimonial, .product-details {
+            background: #fff;
+            margin: 20px auto;
+            border-radius: 10px;
+            max-width: 900px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            padding: 20px;
+        }
+        .testimonial img, .product-details img {
+            max-width: 100%;
+            border-radius: 10px;
+        }
+        footer {
+            background: #222;
+            color: #ccc;
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 
-<header>
-  <h1>Support Healthy Blood Sugar with GlucoTonic</h1>
-  <p>Discover a powerful, natural solution to manage your blood sugar levels effectively.</p>
-  <a class="cta-button" href="https://getglucotonic.com/d/report.php?custom=1&aff=Kengoo&cam=https://tinyurl.com/4pzp7mhd" target="_blank">Try GlucoTonic Now</a>
+<header class="hero">
+    <h1>GlucoTonic</h1>
+    <p>Blood Sugar Support Formula</p>
+    <img src="file-LLE9kvF6q6856ZR1n5aii7" alt="GlucoTonic Hero Image">
+    <br>
+    <button class="cta-button">Order Now</button>
 </header>
 
-<section>
-  <h2>Why Choose GlucoTonic?</h2>
-  <ul>
-    <li>Natural ingredients backed by research</li>
-    <li>Supports stable blood sugar levels</li>
-    <li>Boosts energy and metabolism</li>
-    <li>Trusted by thousands of customers</li>
-  </ul>
+<section class="testimonial">
+    <h2>What Our Customers Say</h2>
+    <p>"GlucoTonic has truly transformed my energy and helped regulate my blood sugar levels. Highly recommended!"</p>
+    <img src="file-VXwFAiksEz9DkGQK5M2wWH" alt="GlucoTonic Testimonial Image">
 </section>
 
-<section>
-  <h2>Customer Reviews</h2>
-  <p><strong>Jane D.</strong>: “I've seen a real difference in my energy and sugar levels since starting GlucoTonic!”</p>
-  <p><strong>Mark T.</strong>: “This supplement is a game-changer for managing my health.”</p>
-</section>
-
-<section style="text-align:center;">
-  <a class="cta-button" href="https://getglucotonic.com/d/report.php?custom=1&aff=Kengoo&cam=https://tinyurl.com/4pzp7mhd" target="_blank">Order Now & Start Feeling Better</a>
+<section class="product-details">
+    <h2>What's Inside</h2>
+    <p>Carefully selected natural ingredients designed to support healthy blood sugar levels.</p>
+    <img src="file-LcaUAWqaoWckfT9EzYQ775" alt="GlucoTonic Supplement Facts">
 </section>
 
 <footer>
-  © 2025 GlucoTonic Affiliate. This is an affiliate promotion. Results may vary.
+    &copy; 2025 GlucoTonic. All rights reserved.
 </footer>
 
 </body>
